fix bug with overflow in popup

--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -30,7 +30,7 @@
 		flex: 1 1 auto;
 		position: relative;
 		max-height: 100%;
-		overflow: scroll;
+		overflow: auto;
 	}
 	&__close{
 		width: rem(21);
